Fix videos being cropped

--- a/app/javascript/flavours/glitch/styles/components/media.scss
+++ b/app/javascript/flavours/glitch/styles/components/media.scss
@@ -298,7 +298,6 @@
     max-width: 100vw;
     max-height: 80vh;
     z-index: 1;
-    object-fit: cover;
     position: relative;
   }
 
