--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -736,7 +736,7 @@
 
 .status__video-player-video {
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
